Rem change so typewriter fits within layout for different devices/dimensions Path correct for pose image in modal Margin adjust so logo shows behind hero

--- a/src/components/LogoBanner/LogoBanner.css
+++ b/src/components/LogoBanner/LogoBanner.css
@@ -2,7 +2,6 @@
   position: fixed;
   background: none; 
   width: 100%;
-  z-index: 1;
   opacity: 1;
   display: flex;
   flex-direction: column;
@@ -26,7 +25,7 @@
 }
 
 .logo-container {
-  padding-top: 7px;
+  margin: -40px;
   display: flex;
   justify-content: center;
   align-items: center;
